--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
             A Python Flask-based URL Shortener that shortens long URLs.
           </p>
           <p class="mt-4 text-xs text-gray-500">
-            Python · Flask · SQLite · Jinja2 templates
+            Python · Flask · SQLite · Jinja2
           </p>
         </a>
 
